konst/tests/misc_tests/slice_ui_tests/slice_macros_type_err.stderr
error[E0308]: mismatched types
  --> tests/misc_tests/slice_ui_tests/slice_macros_type_err.rs:10:23
   |
10 |     slice::fill_with!(arr,|| 0);
   |                       ^^^ expected `&mut [_]`, found `[u8; 4]`
   |
   = note: expected mutable reference `&mut [_]`
                          found array `[u8; 4]`
help: consider mutably borrowing here
   |
10 |     slice::fill_with!(&mut arr,|| 0);
   |                       ++++

error[E0308]: mismatched types
  --> tests/misc_tests/slice_ui_tests/slice_macros_type_err.rs:11:35
   |
11 |     slice::fill_with!(&mut arr,|| 0u16);
   |     ------------------------------^^^^-
   |     |                             |
   |     |                             expected `u8`, found `u16`
   |     expected due to the type of this binding

error[E0308]: mismatched types
  --> tests/misc_tests/slice_ui_tests/slice_macros_type_err.rs:12:5
   |
12 |     slice::fill_with!(&mut arr, mismatched_func);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |     |
   |     expected `u8`, found `u16`
   |     expected due to the type of this binding
   |
   = note: this error originates in the macro `slice::fill_with` (in Nightly builds, run with -Z macro-backtrace for more info)
